# CoursesWork5_Upit

./: .gitignore  README.md  main.py  pyproject.toml
src/: DBManager.py  utils.py
